--- a/SamsWarehouse/Views/Product/Index.cshtml
+++ b/SamsWarehouse/Views/Product/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model List<SamsWarehouse.Models.Product>
+@{
+    ViewData["Title"] = "Product Page";
 }
 
 <div class="text-center">
