--- a/SamsWarehouse/wwwroot/css/site.css
+++ b/SamsWarehouse/wwwroot/css/site.css
@@ -126,3 +126,12 @@ body {
 }
 
 
+body {
+    padding-top: 60px;
+}
+
+@media (max-width: 979px) {
+    body {
+        padding-top: 0px;
+    }
+}
