--- a/SamsWarehouse/Views/Product/Index.cshtml
+++ b/SamsWarehouse/Views/Product/Index.cshtml
@@ -12,27 +12,34 @@
     <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
     @foreach (var product in Model)
 	{
-        
-            
-                <div class="col mb-5">
-                    <div class="card h-100 shadow">
-                        <!-- Product image-->
-                    <img style="padding: 10px;" class="card-img-top bg-primary" src="@Url.Content("~/images/thumbnail/" + product.Id +"/"+ product.Id +"_1.webp")">
-                        <!-- Product details-->
-                        <div class="card-body p-2 pt-2 bg-body-secondary">
-                            <div class="text-center">
-                                <!-- Product name-->
+
+
+            <div class="col mb-5">
+                <div class="card h-100 shadow">
+                    <!-- Product image -->
+                    <a asp-area="" asp-controller="Product" asp-action="Details" asp-route-id="@product.Id" style="color:inherit;text-decoration:none;">
+                        <img style="padding: 10px;" class="card-img-top bg-primary" src="@Url.Content("~/images/thumbnail/" + product.Id +"/"+ product.Id +"_1.webp")">
+                    </a>
+                    <!-- Product details -->
+                    <div class="card-body p-2 pt-2 bg-body-secondary">
+                        <div class="text-center">
+                            <!-- Product name -->
+                            <a asp-area="" asp-controller="Product" asp-action="Details" asp-route-id="@product.Id" style="color:inherit;text-decoration:none;">
                                 <h5 class="fw-bolder">@product.Title</h5>
-                                <!-- Product price-->
-                                $@product.Price
-                            </div>
+                            </a>
+                            <!-- Product price -->
+                            $@product.Price
                         </div>
-                        <!-- Product actions-->
-                        <div class="card-footer p-2 pt-2 border-top-0">
-                        <div class="text-center"><a class="btn btn-outline-secondary mt-auto" href="#">Add To Cart</a></div>
+                    </div>
+                    <!-- Product actions -->
+                    <div class="card-footer p-2 pt-2 border-top-0">
+                        <div class="text-center">
+                            <a class="btn btn-primary mt-auto" href="#">Add To Cart</a>
                         </div>
                     </div>
                 </div>
+            </div>
+
             
         
     }
