--- a/SamsWarehouse/Views/Product/Details.cshtml
+++ b/SamsWarehouse/Views/Product/Details.cshtml
@@ -12,7 +12,7 @@
     <div class="row">
         <div id="productImages" class="carousel slide col-md-6" >
            
-            <div class="carousel-inner border m-1">
+            <div class="carousel-inner border m-1 bg-primary rounded-5 shadow">
                 <div class="carousel-item active">
                     <img src="@Url.Content("~/images/original/" + Model.Id +"/"+ Model.Id +"_1.webp")" class="d-block w-100">
                 </div>
@@ -23,7 +23,7 @@
                     </div>
                 }   
             </div >
-            <div class="row-cols-5">
+            <div class="row-cols-5 bg-body-secondary rounded">
                 <img type="button" data-bs-target="#productImages" data-bs-slide-to="0" src="@Url.Content("~/images/original/" + Model.Id +"/"+ Model.Id +"_1.webp")" style="height:100px; width:100px" class="border m-1">
                 @*<button type="button" data-bs-target="#productImages" data-bs-slide-to="0" class="active" aria-current="true"></button>*@
                 @for (int i = 1; i < Model.images; i++)
@@ -42,17 +42,23 @@
             @Model.Size
             </div>
             <div >
-                <h2><b>$@Model.Price</b></h2>
+                <h2><b>@Model.Price.ToString("c2")</b></h2>
                 <a class="btn btn-primary m-2 mt-auto" href="#">Add To Cart</a>
             </div>
             
             
         </div>
-    </div>    
-    <h2 class="bg-primary rounded-3 p-2 my-2">Details</h2>
-    <div id="Details" class="text-left bg-body-tertiary rounded-3 p-2 mx-4" style="white-space: pre-wrap;">@Model.Details</div>
-    <h2 class="bg-primary rounded-3 p-2 my-2">Ingredients</h2>
-    <div id="Ingredients" class="text-left bg-body-tertiary rounded-3 p-2 mx-4" style="white-space: pre-wrap;">@Model.Ingredients</div>
+    </div>
+    @if (!String.IsNullOrEmpty(Model.Details))
+    {
+        <h2 class="bg-primary rounded-3 p-2 my-2">Details</h2>
+        <div id="Details" class="text-left bg-body-tertiary rounded-3 p-2 mx-4" style="white-space: pre-wrap;">@Model.Details</div>
+    }
+     @if (!String.IsNullOrEmpty(Model.Ingredients))
+    {
+        <h2 class="bg-primary rounded-3 p-2 my-2">Ingredients</h2>
+        <div id="Ingredients" class="text-left bg-body-tertiary rounded-3 p-2 mx-4" style="white-space: pre-wrap;">@Model.Ingredients</div>
+    }
 </div>
 
 
