--- a/SamsWarehouse/Views/Shared/_Layout.cshtml
+++ b/SamsWarehouse/Views/Shared/_Layout.cshtml
@@ -21,8 +21,8 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between" style="align-items:stretch;display:flow-root;">
+                    <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Product" asp-action="Index">Products</a>
                         </li>
@@ -30,14 +30,35 @@
                             <a class="nav-link" asp-area="" asp-controller="Product" asp-action="Privacy">Privacy</a>
                         </li>*@
                     </ul>
-                    <button class="btn" id="themeToggleBtn">test</button>
+                    <div class="flex-grow-1 dropdown-center ">
 
-                    <button class="btn btn-outline-secondary mt-auto" asp-area="" asp-controller="Product" asp-action="Index">
-                        <img src="~/Logo.svg" height="25" width="25" >Cart</img>
-                            
-                        <span class="badge ms-1 bg-secondary rounded-pill">0</span>
-                    </button>
+                        <input id="searchBar" style="width:100%" class=" rounded-5 p-2 mx-1 dropdown-toggle shadow" placeholder="Search our products" data-bs-toggle="dropdown" aria-expanded="false"></input>
+                        <ul style="width:100%;max-height:40vh" class="dropdown-menu shadow overflow-auto" id="searchResults">
+                        </ul>
+                    </div>
+                    <button class="btn mx-1" id="themeToggleBtn"></button>
                     
+                    
+                    @if (Context.Session.GetInt32("ID") != null)
+                    {
+                        //logged in
+                        <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" id="cartContents">
+                            </button>
+                        </div>
+                    <a class="btn btn-outline-secondary mt-auto mx-1" asp-area="" asp-controller="Auth" asp-action="logout">
+                            <img src="~/images/user.svg" height="25" width="25">Logout
+                        </a>
+                    }
+                    else
+                    {
+                    <a class="btn btn-outline-secondary mt-auto mx-1" asp-area="" asp-controller="Auth" asp-action="login">
+                        <img src="~/images/user.svg" height="25" width="25">Login
+                    </a>
+                    }
+
+
+
                 </div>
             </div>
         </nav>
