--- a/SamsWarehouse/Views/Product/Details.cshtml
+++ b/SamsWarehouse/Views/Product/Details.cshtml
@@ -43,7 +43,7 @@
             </div>
             <div >
                 <h2><b>@Model.Price.ToString("c2")</b></h2>
-                <a class="btn btn-primary m-2 mt-auto" href="#">Add To Cart</a>
+                <a class="btn btn-primary m-2 mt-auto" onClick="addToCart(@Model.Id,1)">Add To Cart</a>
             </div>
             
             
