--- a/SamsWarehouse/Views/Auth/Login.cshtml
+++ b/SamsWarehouse/Views/Auth/Login.cshtml
@@ -23,7 +23,10 @@
                             <div class="m-5">
 
                                 <img src="~/Logo.svg" height="100" width="100">Sam's Warehouse</img>
-                                
+                                <p class="text-center">
+                                    <b>LOGIN</b>
+                                </p>
+                                <hr />
                                 <form asp-action="login" id"fields">
                                     @*<label id="result" class="control-label"></label>*@
                                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
