--- a/SamsWarehouse/Views/Auth/Signup.cshtml
+++ b/SamsWarehouse/Views/Auth/Signup.cshtml
@@ -23,7 +23,10 @@
                             <div class="m-5">
 
                                 <img src="~/Logo.svg" height="100" width="100">Sam's Warehouse</img>
-
+                                <p class="text-center">
+                                    <b>SIGNUP</b>
+                                </p>
+                                <hr />
                                         <form asp-action="signup">
                                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                             <div class="form-group" style=" width:100%">
