--- a/SamsWarehouse/Views/About/Index.cshtml
+++ b/SamsWarehouse/Views/About/Index.cshtml
@@ -49,9 +49,29 @@
     <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
         <source src="~/background.mp4" type="video/mp4">
     </video>
-    <div class="video-background-content w-50 h-75">
-        <div class="d-flex h-100 text-center align-items-center bg-primary">
-            test
+    <div class="video-background-content h-100">
+        <div class="d-flex h-100 text-center align-items-center">
+            <div class="w-100 text-white">
+                <img style="width:100px" src="~/Logo.svg" class="bg-body rounded-3"></img>
+                <p class="lead mb-0">Sam's Warehouse</p>
+                <p class="lead mb-o">Stocking your food needs</p>
+            </div>
+        </div>
+    </div>
+    
+</div>
+<div class="container h-100 p-3">
+    <div class="d-flex h-100 text-center align-items-center">
+        <div style="white-space: pre-wrap;">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed facilisis euismod velit vitae aliquam. Etiam et molestie velit. Duis eget hendrerit eros. Aliquam dui lorem, luctus elementum auctor nec, dictum sit amet enim. Sed auctor ipsum a nulla tempus, non commodo nibh sollicitudin. Duis suscipit gravida turpis eget tincidunt. Vivamus vitae ante auctor, accumsan magna sed, accumsan justo. Duis vitae vehicula arcu. Aenean consequat odio ut ex condimentum, ut dignissim enim semper. Nullam lacinia maximus metus. Maecenas gravida porttitor urna, sed commodo eros luctus ac. Maecenas tincidunt nisl non viverra pellentesque. Fusce vitae nibh nec dolor faucibus semper at non velit. Pellentesque at diam ex. Suspendisse nec mattis lacus. Nulla ultricies mollis ipsum, vulputate aliquam ligula viverra vitae.
+
+    Donec hendrerit velit a odio vehicula, sed consequat dolor maximus. Mauris at justo tincidunt ligula rhoncus suscipit. Sed dignissim elit vel suscipit pellentesque. Sed varius dui sed dolor tincidunt venenatis. Curabitur pharetra libero ex, vitae elementum ipsum tincidunt eget. Vestibulum vitae posuere eros. Aliquam erat volutpat. Phasellus vitae tortor et purus vehicula aliquet. Fusce mollis pharetra lectus, et ornare ipsum consectetur nec. Suspendisse sit amet vulputate ex. Praesent tempor dolor purus, id pretium risus porttitor quis. Etiam eu imperdiet lacus. Quisque justo nisl, rutrum eu fringilla ac, pulvinar quis nisi. Donec non ornare urna.
+
+    Aliquam sed consequat eros. Nulla consequat, ligula nec posuere faucibus, ipsum ante iaculis ligula, eu convallis lacus nunc eu ligula. Vestibulum nec ullamcorper neque. Suspendisse ac pellentesque mauris. Aliquam eget lectus vitae justo tincidunt pellentesque nec non sapien. Nullam a consectetur erat, non sodales nisi. Curabitur augue felis, imperdiet et porttitor sit amet, congue in lectus. Fusce nibh orci, commodo et justo in, aliquet mattis quam. Sed ac mattis velit. Integer bibendum sapien neque, a molestie elit consequat nec. Nunc hendrerit ante ante.
+
+    Praesent ac magna at ipsum luctus ornare in ut turpis. Donec consectetur mi sed nunc rutrum, a elementum massa congue. Suspendisse congue, tortor vel fringilla sodales, eros odio luctus nunc, nec fermentum turpis nulla sed lorem. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse maximus lobortis libero a auctor. Ut ut orci id ante congue laoreet. Nam suscipit lacus quis diam auctor, non malesuada lacus porta. In bibendum congue urna vitae varius. Phasellus lacinia lectus neque, ac ultricies nibh tempor quis. Vestibulum blandit, quam sit amet ultricies tempor, orci arcu faucibus mauris, a vestibulum leo lectus ac risus. Nam suscipit nunc eget diam porta, ac feugiat lacus pellentesque.
+
+    Integer facilisis lacus ut magna interdum dignissim. Morbi id dapibus neque. Sed et consectetur ligula. Cras quis ligula sit amet nisi sollicitudin mollis. Donec dignissim rhoncus enim convallis viverra. Vestibulum eu dictum metus, maximus elementum ipsum. Vestibulum faucibus malesuada massa non malesuada. In aliquet quam purus, vel lobortis ante faucibus at. Etiam accumsan vel sem quis laoreet. Morbi velit purus, finibus a vestibulum et, pellentesque a enim.
         </div>
     </div>
 </div>
