--- a/SamsWarehouse/Views/Shared/_Layout.cshtml
+++ b/SamsWarehouse/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
 
                         <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
                             <img src="~/Logo.svg" height="25" width="25">Cart
-                            <span class="badge ms-1 bg-secondary rounded-pill" id="price"></span>
+                            <span class="badge ms-1 rounded-pill" id="price"></span>
 
                             </button>
                         
