--- a/SamsWarehouse/Views/Auth/Signup.cshtml
+++ b/SamsWarehouse/Views/Auth/Signup.cshtml
@@ -17,41 +17,39 @@
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-                    <div class="card bg-primary" style="border-radius: 1rem;">
+                    <div class="card bg-primary rounded-4" >
                         <div class="card-body p-5">
 
                             <div class="m-5">
 
                                 <img src="~/Logo.svg" height="100" width="100">Sam's Warehouse</img>
-                                <p class="text-center">
+                                <div class="text-center">
                                     <b>SIGNUP</b>
-                                </p>
+                                </div>
                                 <hr />
-                                        <form asp-action="signup">
-                                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                            <div class="form-group" style=" width:100%">
-                                                <label asp-for="Username" class="control-label"></label>
-                                        <input style="width:100%" asp-for="Username" type="email" class="form-control" placeholder="johndoe@example.com" />
-                                                <span asp-validation-for="Username"  class="text-danger"></span>
-                                            </div>
-                                            <div class="form-group" style="width:100%">
-                                                <label asp-for="Password" class="control-label"></label>
-                                        <input style="width:100%" type="password" asp-for="Password" class="form-control" placeholder="Password123" />
-                                                <span asp-validation-for="Password" class="text-danger"></span>
-                                            </div>
-                                            <div class="form-group">
-                                        <input type="submit" value="Signup" class="btn btn-primary mt-3" style="width:100%" />
-                                            </div>
-                                        </form>
+                                <form asp-action="signup" id"fields">
+                                  
+                                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                    <div class="form-floating mb-3 w-100">
 
-                                
+                                        <input asp-for="Username" class="form-control w-100" placeholder="johndoe@example.com" type="email" />
+                                        <label asp-for="Username" class="control-label"></label>
+                                        <span asp-validation-for="Username" class="text-danger"></span>
+                                    </div>
+                                    <div class="form-floating w-100">
+                                        <input asp-for="Password" class="form-control w-100" placeholder="Password123" type="password" />
+                                        <label asp-for="Password" class="control-label"></label>
+                                        <span asp-validation-for="Password" class="text-danger"></span>
+                                    </div>
+                                    <input type="submit" value="Signup" class="btn btn-primary mt-3 w-100" />
+                                </form>
                             </div>
                             <hr />
                             <div class="mx-5">
-                                <p class="text-center">
+                                <div class="text-center mb-2">
                                     <b>Already have an account?</b>
-                                </p>
-                                <a class="btn btn-outline-secondary" style="width:100%" asp-area="" asp-controller="Auth" asp-action="login">Login</a>
+                                </div>
+                                <a class="btn btn-outline-secondary w-100" asp-area="" asp-controller="Auth" asp-action="login">Login</a>
 
                             </div>
 
