--- a/SamsWarehouse/Views/Cart/CartModal.cshtml
+++ b/SamsWarehouse/Views/Cart/CartModal.cshtml
@@ -12,12 +12,13 @@
 
 
 }
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@40,400,0,0" />
 <div class="offcanvas-header">
-    <div class="btn-group dropdown" style="width: 100%;">
+    <div class="btn-group dropdown w-100">
         <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
             @currentCart.Name
         </button>
-        <ul class="dropdown-menu" style="width:100%">
+        <ul class="dropdown-menu w-100" >
 
             @foreach (var cart in Model)
             {
@@ -33,7 +34,11 @@
                 {
                     <li>
                         <tr>
-                            <a class="dropdown-item d-flex justify-content-lg-between" onclick="switchCart(@cart.Id)">@cart.Name<img type="button" src="/delete.svg" style="width:25px;height:25px;" onclick="removeCart(@cart.Id)"></img></a>
+                            <a class="dropdown-item d-flex justify-content-lg-between" onclick="switchCart(@cart.Id)">
+                                @cart.Name<span type="button" onclick="removeCart(@cart.Id)" class="material-symbols-rounded w-25 h-25">
+                                    delete
+                                </span>
+                            </a>
                         </tr>
                     </li>
                 }
@@ -42,7 +47,7 @@
             <div class="input-group">
                 <input id="newCartName" type="text" class="form-control" placeholder="Add New Cart" aria-label="Add New Cart" aria-describedby="basic-addon2" >
                 <div class="input-group-append">
-                    <a style="display:flex" class="btn btn-outline-secondary mx-2" id="createCart" onclick="createCart(document.getElementById('newCartName').value);" type="button">Create</a>
+                    <a  class="btn btn-outline-secondary mx-2 d-flex" id="createCart" onclick="createCart(document.getElementById('newCartName').value);" type="button">Create</a>
                 </div>
             </div>
 
@@ -93,7 +98,10 @@ else
                     <div class="col-12">
                             <div class="d-flex align-items-center">
                                 <input id="form1" min="0" name="quantity" value="@product.Quantity" type="number" class="form-control form-control-sm" onchange="setQuantityCart(@product.ProductId,this.value)">
-                                <img type="button" src="/delete.svg" style="width:25px;height:25px;" onclick="removeFromCart(@product.ProductId)"></img>
+                                <span type="button" onclick="removeFromCart(@product.ProductId)" class="material-symbols-rounded w-25 h-25">
+                                    delete
+                                </span>
+                
                             </div>
                     </div>
                 </div>
