removed inline javascript and enabled content security policy

--- a/SamsWarehouse/Views/Auth/Login.cshtml
+++ b/SamsWarehouse/Views/Auth/Login.cshtml
@@ -27,14 +27,14 @@
                                     <b>LOGIN</b>
                                 </div>
                                 <hr />
-                                <form asp-action="login" id"fields">
+                                <form asp-action="login" id="fields">
                                     @*<label id="result" class="control-label"></label>*@
                                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                     <div class="form-floating mb-3 w-100" >
                                         
-                                        <input asp-for="Username" class="form-control w-100" placeholder="johndoe@example.com" type="email" />
-                                        <label asp-for="Username" class="control-label"></label>
-                                        <span asp-validation-for="Username" class="text-danger"></span>
+                                        <input asp-for="Email" class="form-control w-100" placeholder="johndoe@example.com" type="email" />
+                                        <label asp-for="Email" class="control-label"></label>
+                                        <span asp-validation-for="Email" class="text-danger"></span>
                                     </div>
                                     <div class="form-floating w-100">
                                         <input asp-for="Password" class="form-control w-100" placeholder="Password123" type="password" />
@@ -42,7 +42,7 @@
                                         <span asp-validation-for="Password" class="text-danger"></span>
                                     </div>
                                 </form>
-                                <button onClick="login()" class="btn btn-primary mt-3 w-100" />Login</button>
+                                <button id="loginBtn" class="btn btn-primary mt-3 w-100" />Login</button>
                             </div>
                             <hr />
                             <div class="mx-5">
@@ -59,41 +59,13 @@
             </div>
         </div>
     </section>
-    <script>
-        var xhr = null;
 
-        async function login() {
-            var username = document.getElementById("Username").value;
-            var password = document.getElementById("Password").value;
-            //var result = document.getElementById("result");
-            var form = new FormData();
-            form.append("Username", username);
-            form.append("Password", password);
-
-            try {
-                const response = await fetch("/Auth/login", {
-                    method: "POST",
-                    body: form,
-                });
-
-                if (response.ok) {
-window.location.href = "/";
-                    //const responseText = await response.text();
-                    //console.log(responseText);
-                    // Handle the successful response here
-                    //result.innerHTML = responseText;
-                } else {
-                    alert("Invalid Login")
-                    //result.innerHTML = '<b class="text-danger">Invalid Login<b>';
-                }
-            } catch (error) {
-            }
-        }
-        
-
-    </script>
-<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/js/login.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 
 </body>
 </html>
