--- a/SamsWarehouse/Views/Product/Privacy.cshtml
+++ b/SamsWarehouse/Views/Product/Privacy.cshtml
@@ -3,4 +3,6 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>We do not share any data provided to us.</p>
+<p>No information provided to us will be used for profit or gain</p>
+
