--- a/SamsWarehouse/wwwroot/scss/custom.scss
+++ b/SamsWarehouse/wwwroot/scss/custom.scss
@@ -13,7 +13,7 @@ $tertiary-rgb: 20, 92, 158;
 @import "../lib/bootstrap/scss/maps";
 @import "../lib/bootstrap/scss/mixins";
 @import "../lib/bootstrap/scss/root";
-
+@import "../lib/bootstrap/scss/utilities";
 
 .card {
     text-decoration: none;
