--- a/SamsWarehouse/Views/Cart/CartModal.cshtml
+++ b/SamsWarehouse/Views/Cart/CartModal.cshtml
@@ -12,7 +12,6 @@
 
 
 }
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@40,400,0,0" />
 <div class="offcanvas-header">
     <div class="btn-group dropdown w-100">
         <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
@@ -25,21 +24,21 @@
                 if (cart.Id == currentCart.Id)
                 {
                     <li>
-                        <tr>
-                            <a class="dropdown-item active d-flex justify-content-lg-between" aria-current="true" onclick="switchCart(@cart.Id)">@cart.Name</a>
-                        </tr>
+
+                        <a class="dropdown-item active d-flex justify-content-lg-between" data-switch-cart-id="@cart.Id" aria-current="true">@cart.Name</a>
+                        
                     </li>
                 }
                 else
                 {
-                    <li>
-                        <tr>
-                            <a class="dropdown-item d-flex justify-content-lg-between" onclick="switchCart(@cart.Id)">
-                                @cart.Name<span type="button" onclick="removeCart(@cart.Id)" class="material-symbols-rounded w-25 h-25">
-                                    delete
-                                </span>
-                            </a>
-                        </tr>
+                    <li class="d-flex">
+
+                        <button class="dropdown-item justify-content-lg-between" data-switch-cart-id="@cart.Id">
+                                @cart.Name
+                            </button>
+                            <img type="button" src="/delete.svg" width=25 height=25 data-remove-cart-id="@cart.Id">
+                            </img>
+                        
                     </li>
                 }
             }
@@ -47,7 +46,7 @@
             <div class="input-group">
                 <input id="newCartName" type="text" class="form-control" placeholder="Add New Cart" aria-label="Add New Cart" aria-describedby="basic-addon2" >
                 <div class="input-group-append">
-                    <a  class="btn btn-outline-secondary mx-2 d-flex" id="createCart" onclick="createCart(document.getElementById('newCartName').value);" type="button">Create</a>
+                    <a  class="btn btn-outline-secondary mx-2 d-flex" id="createCart"  type="button">Create</a>
                 </div>
             </div>
 
@@ -97,10 +96,9 @@ else
                     </div>
                     <div class="col-12">
                             <div class="d-flex align-items-center">
-                                <input id="form1" min="0" name="quantity" value="@product.Quantity" type="number" class="form-control form-control-sm" onchange="setQuantityCart(@product.ProductId,this.value)">
-                                <span type="button" onclick="removeFromCart(@product.ProductId)" class="material-symbols-rounded w-25 h-25">
-                                    delete
-                                </span>
+                                <input min="0" name="quantity" value="@product.Quantity" type="number" class="form-control form-control-sm" data-set-item-quantity-id="@product.ProductId">
+                                <img type="button" src="/delete.svg" width=25 height=25 data-remove-from-cart-id="@product.ProductId" >
+                                </img>
                 
                             </div>
                     </div>
