--- a/SamsWarehouse/Views/Product/Details.cshtml
+++ b/SamsWarehouse/Views/Product/Details.cshtml
@@ -39,11 +39,11 @@
         <div class="col-6 ">
             <div>
             <h2>@Model.Title</h2>
-            @Model.Size
+            <h4>@Model.Size</h4>
             </div>
             <div >
                 <h2><b>@Model.Price.ToString("c2")</b></h2>
-                <a class="btn btn-primary m-2 mt-auto" onClick="addToCart(@Model.Id,1)">Add To Cart</a>
+                <a class="btn btn-primary m-2 mt-auto" data-add-to-cart-id="@Model.Id">Add To Cart</a>
             </div>
             
             
