--- a/SamsWarehouse/Views/Product/Index.cshtml
+++ b/SamsWarehouse/Views/Product/Index.cshtml
@@ -36,7 +36,7 @@
                     {
                         <div class="card-footer p-2 pt-2 border-top-0">
                             <div class="text-center">
-                                <a class="btn btn-primary mt-auto" onClick="addToCart(@product.Id,1)">Add To Cart</a>
+                                <a class="btn btn-primary mt-auto" data-add-to-cart-id="@product.Id">Add To Cart</a>
                             </div>
                         </div>
                     }
